# arch-home-server

./: .gitignore  Makefile  README.md  k3d.yaml  prep-server.sh  prepare-arch.bash  zshrc-post  zshrc-pre
arch-setup/: gitconfig  prep-server.sh  starship.toml  zshrc-post
azure-dns-service/: .pre-commit-config.yaml  Dockerfile  az-dns-update.bash  az.env.ssh.same.passphrased.age  azdns-update.py  dns.dev.env  pyproject.toml
deploy/: all-namespaces.yaml  kustomization.yaml
deploy/apps/homebox/: homebox-deploy.yaml
deploy/baseline/gatekeeper/: kustomization.yaml
deploy/baseline/gatekeeper/constraints/: containerrequests.yaml  kustomization.yaml
deploy/homebox/: homebox-deploy.yaml
deploy/k3d-cluster/: k3d-template.yaml
docker-deploy/0-baseline/: .env  docker-compose.yaml
docker-deploy/0-baseline/traefik2/: config-dynamic.yaml  middlewares.yaml
docker-deploy/1-other-apps/: README.md  docker-compose.yaml
docker-deploy/endless-ssh/: docker-compose.yaml
docker-deploy/hass-et-al/: README.md  docker-compose.yaml
docker-deploy/hass-et-al/mosquitto/config/: mosquitto.conf
docker-deploy/secrets/: README.md
k3d-cluster/: cluster.bash  k3d-template.yaml  k3d.yaml
k8s-deploy/: kustomization.yaml
k8s-deploy/apps/filebrowser/: filebrowser-deploy.yaml  kustomization.yaml
k8s-deploy/apps/homebox/: homebox-deploy.yaml  kustomization.yaml
k8s-deploy/k3d-cluster/: README.md  add-docker-container.bash  cluster.bash  k3d-template.yaml  traefik-partial.yaml
k8s-deploy/k3d-cluster/auto-deploy-extras/: coredns-docker-local.yaml  traefik-dashboard.yaml
(+1 files in other folders)
